syntax = "proto3";

option go_package = "agent-boot/proto/generated";

package search;

service Search {
    rpc Search(SearchRequest) returns (SearchResponse) {}
}

message SearchRequest {
    repeated string queries = 1;
}

message SearchResponse {
    // The response has all the grounding data with citations. 
    string groundingWithCitations = 1;
}
